--- a/alaskatrip.html
+++ b/alaskatrip.html
@@ -6,7 +6,8 @@
 <style>
 body {
     font-family: "Lato", sans-serif;
-    background-image: linear-gradient(to bottom right, rgb(189, 228, 255), rgb(83, 189, 255));
+    background-image: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(50, 177, 255));
+    background-attachment: fixed;
 }
 
 .sidenav {
@@ -47,6 +48,78 @@ body {
 h1 {text-align: center;}
 p {text-align: left;}
 div {text-align: center;}
+
+
+#Taylorandcodyalaska {
+    left: 1%;
+  position: absolute;
+  top: 270%;
+}
+#Alaskamountains {
+    right: 1%;
+  position: absolute;
+  top: 340%;
+}
+#Alaskatrain {
+    left: 1%;
+  position: absolute;
+  top: 400%;
+}
+#Alaskatrainselfie {
+    right: 1%;
+  position: absolute;
+  top: 470%;
+}
+#Railroadtracks {
+    left: 1%;
+  position: absolute;
+  top: 520%;
+}
+#Helicopter {
+    left: 1%;
+  position: absolute;
+  top: 600%;
+}
+#Dogsled {
+    right: 1%;
+  position: absolute;
+  top: 650%;
+}
+#Glacier {
+    left: 1%;
+  position: absolute;
+  top: 720%;
+}
+#Seaotter {
+    right: 1%;
+  position: absolute;
+  top: 800%;
+}
+#Ziplineselfie {
+    left: 1%;
+  position: absolute;
+  top: 880%;
+}
+#Alaskaglacierhike {
+    right: 1%;
+  position: absolute;
+  top: 950%;
+}
+#Alaskahikeselfie {
+    left: 1%;
+  position: absolute;
+  top: 1050%;
+}
+#Alaskaraft {
+    right: 1%;
+  position: absolute;
+  top: 1250%;
+}
+#Bison {
+    left: 1%;
+  position: absolute;
+  top: 1300%;
+}
 </style>
 </head>
 <body>
@@ -60,7 +133,7 @@ div {text-align: center;}
     <h2>A Step-by-Step Guide of How I Planned the Family Trip of a Lifetime</h2>
     <h3>By Lora Sapp</h3>
     <img src="Alaskapano.png" width="100%">
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         My daughter graduated high school in 2022, and for her senior trip, she wanted to go to Alaska with the family. And I can honestly say it was one of the best, 
         most beautiful places I’ve ever been. Here’s how we did it!
         <br><br>
@@ -71,7 +144,7 @@ div {text-align: center;}
         so if you can find a hostel or something similar, that could be a huge help, depending on the kind of trip you’re looking for.
     </p>
     <h2>Booking and Research</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         We started booking for our trip at the end of March, to leave in June. Many of the hotels/houses were already booked by then, so I would suggest giving 
         yourself even more time to figure all that out. Now, our family was not interested in taking a cruise (which is the most popular option), so I looked into 
         tour groups because I thought planning it all by myself would be too overwhelming. Unfortunately, tour group packages are pretty expensive and you are on their 
@@ -100,14 +173,14 @@ div {text-align: center;}
         to arrange all the rides to and from our excursions.</strong>
     </p>
     <h2>Day 1</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         On our first day of travel, we flew United through Denver to Alaska. We left Orlando, where we live, at around 3:00pm and landed in Anchorage at around 
         11:15pm, AK time. It was very easy to get a taxi at that hour. The cab ride was about 10 min and cost $20. Our hotel was okay, nothing fancy and not much of a 
         view, but relatively cheap and I knew we weren’t staying there long. It was comfortable and had a separate living room with couch, TV and mini fridge, and 
         room darkening shades which was helpful since this time of year it is daylight for about 20 hours a day!
     </p>
     <h2>Day 2</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         As I mentioned before, I scheduled in a sort of cushion day in case flights were messed up and to give us time to sleep and adjust to the time change. 
         <br><br>
         In the morning, we walked downtown (just a few blocks away) and the kids bought some souvenirs and we walked the Coastal Trail for a while. The weather 
@@ -126,8 +199,9 @@ div {text-align: center;}
         smoked salmon appetizer for her dinner and liked it. (Since the sun never goes down neither does the temperature much, so I wore jeans and a light sweater to 
         dinner and was fine… no jacket needed.)
     </p>
+    
     <h2>Day 3</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         Day 3 started with a 5:00am wake up call. We were told we needed to be at the train station by 5:45 because they were expecting 400 passengers that day. We 
         checked out of the hotel and decided to walk the 8 blocks to the train station since it was a downhill easy walk instead of trying to arrange a ride at that 
         time. 
@@ -163,7 +237,7 @@ div {text-align: center;}
         in, you have to keep those open which obviously lets the sunlight in. Summer Solstice was that day and it didn’t get dark at all!</strong>
     </p>
     <h2>Day 4</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         The next day, we cooked breakfast and left at 9:30am for our helicopter ride/dog sled ride.
         <br><br>
         At 10:00, we checked into the Seward Helicopter Tours and <a href="https://sewardhelicopters.com/" target="_blank">Heads Kennel</a> located in Seward. They provided nice covers 
@@ -187,7 +261,7 @@ div {text-align: center;}
         turning in for the night.
     </p>
     <h2>Day 5</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         Day 5 was another early day for us. We had a 5:45am wake up call…Ate breakfast, packed a bag, and headed to <a href="https://www.kayakak.com/" target="_blank">Kayak Adventures Worldwide</a> in 
         downtown Seward to meet up for our daylong boat/kayak trip.
         <br><br>
@@ -216,7 +290,7 @@ div {text-align: center;}
         previously bought frozen Digiorno pizza to have once we go back to the cabin… Nice and easy. Worked out perfectly.
     </p>
     <h2>Day 6</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         The next morning, we woke up at 7:30am, ate breakfast, and headed to the harbor in Seward. We went to <a href="https://www.stoneycreekca.com/" target="_blank">Stony Creek Canopy Tours</a> 
         for my husband and the kids to zipline. It was a three hour activity with 8 ziplines, 2 suspension bridges and 2 rapplings. They had a great time!
         <br><br>
@@ -234,7 +308,7 @@ div {text-align: center;}
         brave!). It was 54 degrees out and the water was not much warmer, but so fun!
     </p>
     <h2>Day 7</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         On our 7th day, we ate breakfast, packed up, and checked out of the beautiful cabin, since we were moving somewhere else for the remainder of our trip. 
         <br><br>
         Since we couldn’t check in to our next place right away, we drove to Seward to hike at the Exit Glacier. We stopped at the bike shop in town because we were 
@@ -281,7 +355,7 @@ div {text-align: center;}
         baths… Slept 9. It was well stocked with dishes, linens, and appliances. Very spacious living room. No air, but again, very nice with the windows open.
     </p>
     <h2>Day 8</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         We finally slept in! I purposely didn’t plan anything this day, expecting that we all may need a day to relax. I read on Tripadvisor that the Russian 
         River Falls was a great thing to do in Cooper Landing. The kids wanted to rest but Steve and I didn’t want to just sit around…The house had a can of bear 
         spray, so we grabbed it and headed to the Russian River to hike to the falls.
@@ -296,7 +370,7 @@ div {text-align: center;}
         Very small and warm and had a small menu but the food was surprisingly good! (Mostly served burgers.)
     </p>
     <h2>Day 9</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         The next day we woke up, ate breakfast, then headed out. At 8:45am, we met at <a href="https://alaskariveradventures.com/" target="_blank">Alaska River Adventures</a> 
         for our raft/float tour. They provided rain overalls and rain boots and life vests. The weather was 63 and sunny… we dressed in layers but found that being on 
         the water was very cold. We wish we had hats and gloves.
@@ -313,7 +387,7 @@ div {text-align: center;}
         daughter and I shared a pizza and my husband got a BBQ combo.
     </p>
     <h2>Day 10</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         On our last day, we ate breakfast, packed up, and checked out of the house at 10. <strong>NOTE: if it weren’t for the first cabin being booked we would have 
         stayed there the whole time and did a rafting/floating trip out of Seward and maybe would have just taken a day trip to Cooper Landing to see the salmon 
         jumping etc. It really wasn’t worth staying in Cooper Landing, but we had a great time no matter what.</strong>
@@ -325,7 +399,7 @@ div {text-align: center;}
         Lastly, we headed the rest of the way to Anchorage to catch our flight home. Awesome trip!!!
     </p>
     <h2>Packing</h2>
-    <p style="margin-left: 250px; margin-right: 250px;">
+    <p style="margin-left: 15%; margin-right: 15%;">
         Packing: This was probably the task I struggled most with… very stressful going from 98 degree weather to high 50-low 60’s and rainy. I was expecting misty 
         rainy weather most of the time and it didn’t rain once! And it was only misty the day of our long boat ride… so you just never know. Here is what I recommend 
         if traveling in mid to late june:
@@ -366,5 +440,23 @@ div {text-align: center;}
 </script>
 
     </div>
+
+    
 </body>
+<img src="Taylorandcodyalaska.png" width="13%" id="Taylorandcodyalaska">
+<img src="Alaskamountains.png" width="13%" id="Alaskamountains">
+<img src="Alaskatrain.png" width="13%" id="Alaskatrain">
+<img src="Alaskatrainselfie.png" width="13%" id="Alaskatrainselfie">
+<img src="Railroadtracks.png" width="13%" id="Railroadtracks">
+<img src="Helicopter.png" width="13%" id="Helicopter">
+<img src="Dogsled.png" width="13%" id="Dogsled">
+<img src="Glacier.png" width="13%" id="Glacier">
+<img src="Seaotter.png" width="13%" id="Seaotter">
+<img src="Ziplineselfie.png" width="13%" id="Ziplineselfie">
+<img src="Alaskaglacierhike.png" width="13%" id="Alaskaglacierhike">
+<img src="Alaskahikeselfie.png" width="13%" id="Alaskahikeselfie">
+<img src="Alaskaraft.png" width="13%" id="Alaskaraft">
+<img src="Bison.png" width="13%" id="Bison">
+
+
 </html>
