--- a/randompage.html
+++ b/randompage.html
@@ -56,6 +56,51 @@ body {
       
       <div class="main">
         <h1 style="color: #cc10b0;">Random</h1>
+        <h3>7/22/2023</h3>
+        <p>So. What's been going on with my life lately? Well, I think I have obtained a new motivation to get my life together. I'm feeling 
+          pretty good, for the most part. I started Hello Fresh, so hopefully that will be good for me because I am very lazy and never go 
+          to the grocery store, meaning I never have food, meaning I either buy takeout or just skip meals. Fun. But anyways. Hopefully that 
+          will help me start eating better because I think not eating very healthy is contributing to my tiredness and laziness and all that 
+          jazz. 
+          <br><br>
+          I also have been listening to podcasts which is whatever. I like this one called "Ologies" and I listen to it whenever I can. I really 
+          do love learning. I've decided to add a minor in Marine Sciences. So my plan: B.S. in Aerospace Engineering; M.S. in Mechanical 
+          Engineering; minors in Mathematics, Astronomy and Astrophysics, and Marine Science; certificate in Engineering leadership; possibly a PhD in something 
+          (like physics or something with space). Yay school. I want to delay my ascent into the real world as much as I can.
+          <br><br>
+          I signed up for my next half Ironman this December in Haines City. I think this is good. It always gives me more motivation to have 
+          a race in mind. Right now, I'm still in my internship, and it's hard to get workouts in, but once school starts up in the fall, I'll 
+          get back into the swing of things. I want to do a full next September in Maryland. My goal is to do this half in December, the Panama 
+          City half in May, and the Maryland full in September. I am really excited. This has given me a purpose. I am going to crush my schooling 
+          and crush my training, and it will all be grand. I have already started designing the Ironman tattoo I want to get.
+          <br><br>
+          I was thinking last night about the Etsy shop I want to start up. I think I am going to commit to it in the fall. Starting with mainly 
+          coasters and keychains and a custom option where people can send in ideas and I can design and print them. This is another thing 
+          that will give me purpose and also help me fund for the expensive races I am planning on doing.
+          <br><br>
+          I've decided I want to become a gamer. I don't know why. Just something for fun I guess. Just like PC games. Maybe xbox if my brother 
+          wants to give me his old one. So many hobbies I want to do. Ugh. Okay. So, roll call: reading (duh), gaming, 3D printing, doodling (oh 
+          how I want to be an artist), blogging, writing fanfic and my book (that I have actually started!), triathlon. I think that's it... for 
+          now. I also have a bunch of paper making stuff that I don't know what to do with. Maybe I'll save the paper making for gifts and stuff. 
+          Like cards.
+          <br><br>
+          Now let's talk about the tattoos I want in the future because why not. Number one is my Ironman tattoo, as I have already mentioned. 
+          It is already in the works. Next, I really want some sort of space tattoo because I love space. I want like a galaxy with maybe an 
+          astronaut and a rocket or something. I'm thinking my left arm for that one. I also want a back tattoo. Not quite sure what I want, but 
+          I saw this cool design of a skeletal hand reaching up, with the arm down your spine, and the hand sort of grabbing your neck? Idk I saw 
+          it on tik tok. I also thing a sword down the back would be rad. I don't have any more ideas for the time being.
+          <br><br>
+          I want to get a tongue piercing, I think. Just because. I like that it's pretty much hidden and then just a little surprise when you 
+          want to show it off. I've had quite a few ear piercings and a belly button piercing, but I took them all out because over the years they 
+          just really started to irritate me. Plus, I exercise so much and they sometimes just get in the way. Anyways, I feel like a tongue piercing 
+          would be less irritating to me. Who knows. I still need to save up so it won't be for a little while. Probably. 
+          <br><br> 
+          Hmm. I don't think there was anything else I want to say. I will keep updating about how my training for my Ironman is going. I'll probably 
+          make a blog post about it eventually. Either after the full, about my whole experience and training. Or just about training for a half for 
+          beginners. Anyways. That's all. Goodbye.
+
+        </p>
+        <hr>
 
         <h3>The problem with having a vagina</h3>
         <p>I'm reading some of the rants I've written in the past and they are so fucking funny I was very dramatic (nothing's changed) 
