--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -62,6 +62,25 @@ body {
           few years that I will accidentally reread books and not even notice until I go and try to add it to my list.
 
         </p>
+        <hr>
+        <h3>Mindwalker</h3>
+        <h4>By Kate Dylan</h4>
+        <p>I thought this book was amazing. If you are (like I was) looking for a distopian fantasy with a badass female lead and an enemies 
+          to lovers style romance that doesn't overwhelm the plot, this book is perfect for you. I thought the story was great. I thought the 
+          characters were great. I laughed. I cried. Though the book really isn't sad, I'm just an empath. And I'm not joking. I cry at the 
+          most not sad books. I cry if someone is being mean to the main character. I cry when the main character feels lost and alone. I cry 
+          at literally any minor inconvenience the characters face. You will notice that will be a common theme in all my reviews. Anyways, 
+          I thought this book was so fun and awesome. 
+          <br>*SPOILERS AHEAD*<br>
+          The ending was less than satisfying in my opinion. It felt like there were just so many plotlines that didn't get their ending, but 
+          I guess that's kind of the point? Like things don't just resolve themselves immediately. It also gives the reader the ability to 
+          use their imagination to how things played out. As a romantic, I wish Sil and Ryder had an epilogue where they were all happy and 
+          kissing, but whatever. I can use my imagination 
+          <br><br>
+          Another plotline I would've loved to see through is everything with Sil's family. We didn't get to see her reunite with her parents 
+          after she was free of her CIP. I'd have liked her to go to them and have a great reunion where she said she was okay and would be 
+          living for many years to come. What can I say, I just love happy endings. Not that we didn't get one... But still!
+        </p>
         
       <hr>
         <h4>Additional Links</h4>
