--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -44,6 +44,26 @@ body {
   .sidenav a {font-size: 18px;}
 }
 </style>
+<style>
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 1000px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  </style>
 </head>
 
 <body>
@@ -56,31 +76,30 @@ body {
       
       <div class="main">
         <h1 style="color: #cc10b0;">Book Reviews</h1>
-        <p>I am working on a picture collage of all the books i've read so far. It's going to take a fuck ton of time but 
-          whatever. I've tried to keep track of them all on an app, but who knows if I've forgotten any. I might start up a goodreads 
-          account and link it below. Put all my books and book reviews on there too. I have literally read so many books in the past 
-          few years that I will accidentally reread books and not even notice until I go and try to add it to my list.
 
-        </p>
-        <hr>
-        <h3>Mindwalker</h3>
-        <h4>By Kate Dylan</h4>
-        <p>I thought this book was amazing. If you are (like I was) looking for a distopian fantasy with a badass female lead and an enemies 
-          to lovers style romance that doesn't overwhelm the plot, this book is perfect for you. I thought the story was great. I thought the 
-          characters were great. I laughed. I cried. Though the book really isn't sad, I'm just an empath. And I'm not joking. I cry at the 
-          most not sad books. I cry if someone is being mean to the main character. I cry when the main character feels lost and alone. I cry 
-          at literally any minor inconvenience the characters face. You will notice that will be a common theme in all my reviews. Anyways, 
-          I thought this book was so fun and awesome. 
-          <br>*SPOILERS AHEAD*<br>
-          The ending was less than satisfying in my opinion. It felt like there were just so many plotlines that didn't get their ending, but 
-          I guess that's kind of the point? Like things don't just resolve themselves immediately. It also gives the reader the ability to 
-          use their imagination to how things played out. As a romantic, I wish Sil and Ryder had an epilogue where they were all happy and 
-          kissing, but whatever. I can use my imagination 
-          <br><br>
-          Another plotline I would've loved to see through is everything with Sil's family. We didn't get to see her reunite with her parents 
-          after she was free of her CIP. I'd have liked her to go to them and have a great reunion where she said she was okay and would be 
-          living for many years to come. What can I say, I just love happy endings. Not that we didn't get one... But still!
-        </p>
+        <div class="dropdown">
+          <span><img src="Bookmindwalker.jpg" width="100px" alt="Mindwalker Cover"></span>
+          <div class="dropdown-content">
+            <h3>Mindwalker: <img src="5stars.jpg" width="100px"></h3>
+            <h4>By Kate Dylan</h4>
+            <p>I thought this book was amazing. If you are (like I was) looking for a distopian fantasy with a badass female lead and an enemies 
+              to lovers style romance that doesn't overwhelm the plot, this book is perfect for you. I thought the story was great. I thought the 
+              characters were great. I laughed. I cried. Though the book really isn't sad, I'm just an empath. And I'm not joking. I cry at the 
+              most not sad books. I cry if someone is being mean to the main character. I cry when the main character feels lost and alone. I cry 
+              at literally any minor inconvenience the characters face. You will notice that will be a common theme in all my reviews. Anyways, 
+              I thought this book was so fun and awesome. 
+              <br><br>*SPOILERS AHEAD*<br>
+              The ending was less than satisfying in my opinion. It felt like there were just so many plotlines that didn't get their ending, but 
+              I guess that's kind of the point? Like things don't just resolve themselves immediately. It also gives the reader the ability to 
+              use their imagination to how things played out. As a romantic, I wish Sil and Ryder had an epilogue where they were all happy and 
+              kissing, but whatever. I can use my imagination 
+              <br><br>
+              Another plotline I would've loved to see through is everything with Sil's family. We didn't get to see her reunite with her parents 
+              after she was free of her CIP. I'd have liked her to go to them and have a great reunion where she said she was okay and would be 
+              living for many years to come. What can I say, I just love happy endings. Not that we didn't get one... But still!
+            </p>
+          </div>
+        </div>
         
       <hr>
         <h4>Additional Links</h4>
