--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -76,9 +76,44 @@ body {
       
       <div class="main">
         <h1 style="color: #cc10b0;">Book Reviews</h1>
-
         <div class="dropdown">
-          <span><img src="Bookmindwalker.jpg" width="100px" alt="Mindwalker Cover"></span>
+          <span><img src="Bookthedarknessoutsideus.jpg" height="200px" alt=""></span>
+          <div class="dropdown-content">
+            <h3>The Darkness Outside Us: <img src="5stars.jpg" width="100px"></h3>
+            <h4>Eliot Schrefer</h4>
+            <p>I read this book probably 4 years ago now, and it remains one of the best books I've ever read. Since it's been so long, this 
+              review isn't going to be too in depth, but to anyone who sees this, this book is everything and you should go read it. I literally 
+              used this book, this YA gay romance book, in essays when applying to colleges. This book shook me to my core. It is so devastating that 
+              I will probably never reread it, seeing as I am such a sensitive soul. Maybe when I'm not a depressed 20 year old. Do not be fooled by my tenderness, 
+              this book does have a happy ending and it's amazing.
+              <br><br>
+              The romance of this book was, in short, heartwrenching. We follow the story of two boys who keep finding and loving each other in spite 
+              of the many hardships they face. God, I love this book. Aside from romance, this book analyzes many more in-depth questions of the 
+              universe. Okay, maybe I'm being dramatic, but whatever. Here is an excerpt from the essay I was talking about. Don't judge me. I'm not 
+              the best writer, okay. Chill out. All you need to know for context is that the essay is about how I like space.
+              <br><br>*SPOILERS AHEAD*<br>
+              "One of my favorite young adult books containing space travel is Eliot Schrefer’s The Darkness Outside Us which follows the 
+              journey of two boys as they venture through space to find a new, habitable planet after theirs is destroyed. The twist is that 
+              the boys journeying are a couple of the many clones of themselves hidden on the spaceship. Every hundred years or so, when the 
+              ship is in need of repairs, a new pair of clones is awoken, without recollection of any of the past clones’ lives or of even 
+              getting on the ship to begin with, and then killed once the repairs are complete. The goal is that this process will continue 
+              until the ship reaches its destination and the last pair of clones starts cultivating a new race of humans. This book is a 
+              beautiful and tragic rendering of the loneliness of space and the potential of close proximity as a cause for both strong 
+              relationships and volatile hostility. 
+              <br>
+              While The Darkness Outside Us may be a fictional book, it effectively conveys the concept of eternal space through the 
+              characters’ loneliness and isolation, and it poses the questions of what happens after Earth can no longer support human life. 
+              The technology and advanced ideas in the novel have merit, if such things were possible in real life, which they very well could 
+              be in billions of years when the earth is eventually engulfed by the sun. The book touches upon the notion that (1) no human can 
+              live long enough to brave space travel and land on a faraway planet and (2) no spacecraft can sustain life for the entire 
+              duration of the trip. "
+
+            </p>
+          </div>
+        </div>
+        
+        <div class="dropdown">
+          <span><img src="Bookmindwalker.jpg" height="200px" alt="Mindwalker Cover"></span>
           <div class="dropdown-content">
             <h3>Mindwalker: <img src="5stars.jpg" width="100px"></h3>
             <h4>By Kate Dylan</h4>
