--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -76,8 +76,69 @@ body {
       
       <div class="main">
         <h1 style="color: #cc10b0;">Book Reviews</h1>
+        <p>Welcome to my book reviews page! Now, this won't have all the books I've read because lord knows I read too damn many. I am 
+          mainly planning on reviewing my favorites and least favorites. Books that stood out to me. And so, you're going to see a lot of 5 
+          star and 1 star reviews. The 3 star books are just okay and I don't feel thinking about them for longer than I have to. Anyways, 
+          please enjoy! 
+        </p>
+        <hr>
+
         <div class="dropdown">
-          <span><img src="Bookthedarknessoutsideus.jpg" height="200px" alt=""></span>
+          <span><img src="Bookrwrb.jpg" height="200px" alt="RWRB Cover"></span>
+          <div class="dropdown-content">
+            <h3>Red White and Royal Blue: <img src="5stars.jpg" width="100px"></h3>
+            <h4>Casey McQuiston</h4>
+            <p>This book will always be one of my favorites. I've re-read it about a million times and when the movie came out, I watched 
+              it like 5 times in a row. I love how the characters are written. I love the plot. I love everything! Alex? So funny and smart. 
+              Henry? Timid and so darn cutie. This is such a feel good book and is worth the read. This is a short review but only because 
+              there are not enough words to describe how cute and sweet and loving and awesome this book is. Go read it right now! The book 
+              is better than the movie, though I thought the movie was cute too.
+            </p>
+          </div>
+        </div>
+
+
+        <div class="dropdown">
+          <span><img src="Bookladyofmystery.jpg" height="200px" alt="Lady of Mystery Cover"></span>
+          <div class="dropdown-content">
+            <h3>Lady of Mystery: <img src="1star.jpg" width="100px"></h3>
+            <h4>Ellie St. Clair</h4>
+            <p> Oh here we go. This one's a doozy. My first bad review on here. So this review is from about a year ago I think? I typed it up 
+              on my computer to vent and now I am sharing it with you. I was on a romance kick at this time, for context. (Still am tbh. Who doesn't love 
+              a good romance?) Please excuse the lowercase everything and bad grammar. This was very much a rant. And very much dramatic. But 
+              I digress.
+              <br><br>*SPOILERS AHEAD*<br>
+              ok so i've been on a romance kick lately. 
+              it's hard for me to read a book in general if it doesn't have some sort of romance in it. so i'm no longer repressing myself 
+              and have just gone straight to the romance genre. i really do love those fairytale, happily ever after romances. and i like 
+              historical romances, but it's sometimes hit or miss. this book, for example, was a miss for 
+              me. i don't know why it got pretty good reviews on kindle, though i didn't really read the reviews. with historical romances, 
+              in my opinion as a raging liberal, authors walk a fine line. like ok women don't have rights, but how is this love interest 
+              going to respond to that. anyways this book, the Lady of Mystery i think it's called, i thought was going to be great. at 
+              first, i loved Phoebe. she was amazing. wanted to change the world, fight for women's rights, refused to fall into the 
+              restraints society attempted to put on her and was her own independent woman. now Jeffery i hated, naturally. as a man, 
+              he obviously didn't believe in Phoebe's ideals. well not obviously, because everyone should believe in equality, but whatever. 
+              i was willing to accept his stupidness and ignorance and rudeness and cockiness and all that for a brief moment, because i 
+              thought he would change. i figured the author of this book cared about women's rights based on how they wrote Phoebe and would 
+              never allow such a man to be a love interest for her. well long story short, i was disappointed. i made it through half way 
+              without Jeffery even changing his ignorant ideals in even the slightest. the romance was ok at times, but never will i ever 
+              in a million years EVER be ok with even attraction between such a horrible person. and maybe some would argue that he was a 
+              gentleman most of the time, but to that i would say i give absolutely zero shits how he acts on the outside if inside he 
+              believes women should have less rights than men simply because of their gender. i have decided not to read any more historical 
+              romances for the time being because of this book. like what the fuck. and at the end, Phoebe was actually willing to step back 
+              from her activist work for a man who didn't believe in the rights of women. AND even at the very end after the supposed 
+              "make-up" after the inevitable conflict, Jeffery STILL disagreed with some of the things in Phoebe's paper outlining FUNDAMENTAL 
+              HUMAN RIGHTS. fuck this book honestly. i skimmed through the second half. couldn't even bring myself to read the sexy scenes 
+              because i was honestly pretty disgusted. so now that i'm done with these historical romances, i guess i'll read some modern 
+              romances. sigh. i liked the historical setting. it seemed more romantic, more simple, more happily ever after. well fuck that. 
+              i'm too much of a feminist for this shit.
+
+            </p>
+          </div>
+        </div>
+        
+        <div class="dropdown">
+          <span><img src="Bookthedarknessoutsideus.jpg" height="200px" alt="The Darkness Outside Us Cover"></span>
           <div class="dropdown-content">
             <h3>The Darkness Outside Us: <img src="5stars.jpg" width="100px"></h3>
             <h4>Eliot Schrefer</h4>
