--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -84,6 +84,41 @@ body {
         <hr>
 
         <div class="dropdown">
+          <span><img src="Booktog.jpg" height="200px" alt="TOG Cover"></span>
+          <div class="dropdown-content">
+            <h3>Throne of Glass Series: <img src="5stars.jpg" width="100px"></h3>
+            <h4>Sarah J. Maas</h4>
+            <p>Ok, let's talk Sarah J. Maas. First of all, love her books. Love ACOTAR, love Crescent City, and love TOG. The big three, if 
+              you will. There's just something about a badass female lead that really gets to me, and I love the romance as well, of course. 
+              I think I am only going to put my review of the Throne of Glass series because I think it's the best. Now, I would argue that 
+              my favorite book from her, the one I re-read the most, is the first Crescent City book (House of whatever and whatever), but I haven't read the next book in the series, and to 
+              be honest I probably never will. I've just lost interest. Have moved on to bigger and better things. Just kidding. But yeah I just 
+              don't think I'll ever finish the series. Still love her books, still love badass YA fantasy novels. But I think I've moved on from 
+              the mainstream ones. You probably won't see a lot of book review on here that would come up in booktok unless I read the book a while 
+              ago. I just like to keep my little books to myself.
+              <br><br>
+              Anyways, let's talk Throne of Glass. Arguably the best book series ever. Or maybe I just read it in a time in my life where I 
+              needed it and now the legacy it holds in my head is simply unbeatable. Like I already mentioned, I love myself a badass female 
+              lead, and this series has loads of them. Aelin, of course, is my favorite. Listen, I'm a rule follower, what can I say! In most 
+              books and movies and TV shows, I will root for the main character. The main character will be my favorite. The author wants me 
+              to think a certain way about a character? Guess what. I will. I'm not a complex person. Don't get me wrong, I love all the women 
+              (and men) in TOG, but no one gets to me as much as Aelin. I would die for her. There aren't enough words to express my love for 
+              these books. I just love how, no matter what she's faced with, Aelin perserveres with a confidence she might not even feel.
+              <br><br>*SPOILERS AHEAD*<br>
+              I love Sarah J. Maas's story building. In all her books, really. I loved all the different plotlines in TOG and loved how they all 
+              came together in the end. I think the only thing I would've liked more about the series is if the ending had more of Aelin saving 
+              the day in battle, with one final plan that ended it all. I'm a sucker for the happily ever afters, okay! I want my main character 
+              to pull through and get their final hurrah before the end. I love that Yrene saved the day, essentially. But I feel like Aelin faced 
+              so many hardships, has been through so much trauma, and she should've been the one to end it. But, I do understand that might've been 
+              a little much maybe? A little predictable.
+              <br><br>
+              If you haven't read these books yet, what are you doing? I feel like they're a right of passage into book culture. Screw the classics. 
+              Read TOG. You won't regret it.
+            </p>
+          </div>
+        </div>
+
+        <div class="dropdown">
           <span><img src="Bookrwrb.jpg" height="200px" alt="RWRB Cover"></span>
           <div class="dropdown-content">
             <h3>Red White and Royal Blue: <img src="5stars.jpg" width="100px"></h3>
