--- a/bookreviewspage.html
+++ b/bookreviewspage.html
@@ -84,6 +84,18 @@ body {
         <hr>
 
         <div class="dropdown">
+          <span><img src="Bookaftg.jpg" height="200px" alt="AFTG Cover"></span>
+          <div class="dropdown-content">
+            <h3>All for the Game Series: <img src="5stars.jpg" width="100px"></h3>
+            <h4>Nora Sakavic</h4>
+            <p>I write and read fanfiction for this series. I feel like that's all you need to know. These books are outlandish and amazing 
+              and I've never been so obsessed with another series in my 20 years of living. I am waiting for all the books in the Sunshine Court 
+              series to come out becasue lord knows I'll be obsessed with that one too and it deserves binging in a blanket cave for days on end.
+            </p>
+          </div>
+        </div>
+
+        <div class="dropdown">
           <span><img src="Booktog.jpg" height="200px" alt="TOG Cover"></span>
           <div class="dropdown-content">
             <h3>Throne of Glass Series: <img src="5stars.jpg" width="100px"></h3>
@@ -212,7 +224,7 @@ body {
           <span><img src="Bookmindwalker.jpg" height="200px" alt="Mindwalker Cover"></span>
           <div class="dropdown-content">
             <h3>Mindwalker: <img src="5stars.jpg" width="100px"></h3>
-            <h4>By Kate Dylan</h4>
+            <h4>Kate Dylan</h4>
             <p>I thought this book was amazing. If you are (like I was) looking for a distopian fantasy with a badass female lead and an enemies 
               to lovers style romance that doesn't overwhelm the plot, this book is perfect for you. I thought the story was great. I thought the 
               characters were great. I laughed. I cried. Though the book really isn't sad, I'm just an empath. And I'm not joking. I cry at the 
